# Analog-Clock

./: .gitignore  Analog_Clock.html  Analog_Clock.js  CMakeLists.txt  README.md
.github/workflows/: Build for all platforms.yml  deploy.yml
headers/: Application.hpp
res/: app.rc
src/: Application.cpp  main.cpp
web-version/: Analog_Clock.wasm
